--- a/gb/16/4/18/n7568464.md
+++ b/gb/16/4/18/n7568464.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qeleqz3066/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qeleqz3066/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qeleqz3066/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qeleqz3066/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qeleqz3066/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2015年中共监狱迫害法轮功学员综述</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/04/2016-3-28-minghui-falun-gong-philly-ss-e1461012282408.jpg" />
 <h6>中共酷刑示意图（明慧网）
 </h6>
 <hr>
-	<p>【大纪元2016年04月19日讯】二零一五年明慧网发表揭露中共监狱迫害<ahref="https://github.com/qeleqz3066/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员的文章151篇，证实至少有44所监狱还在使用暴力、酷刑，强制转化迫害法轮功学员。</p>
+	<p>【大纪元2016年04月19日讯】二零一五年明慧网发表揭露中共监狱迫害<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员的文章151篇，证实至少有44所监狱还在使用暴力、酷刑，强制转化迫害法轮功学员。</p>
 <p>黑龙江省大庆监狱狱警自供：“我们也没办法，周永康有话：宁可关死也不放人。”前中共政法委书记周永康已经遭恶报被判无期徒刑入狱，中共的监狱还在执行周永康的迫害指令。</p>
-<p>据明慧网统计，二零一五年有878名<ahref="https://github.com/qeleqz3066/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员被非法判刑，目前有数千名法轮功学员非法关押在中国大陆监狱中遭受迫害。</p>
+<p>据明慧网统计，二零一五年有878名<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员被非法判刑，目前有数千名法轮功学员非法关押在中国大陆监狱中遭受迫害。</p>
 <p>为了强制“转化”法轮功学员，中共监狱迫害的手段更加残忍、隐蔽。一边使用酷刑迫害，一边严密封锁迫害信息。</p>
 <p>二零一五年至少有八名法轮功学员被迫害致死：辽宁本溪运政群、四川广汉市李桂香、四川邹云祝、吉林省磐石市刘庆田、黑龙江冯雪、宁夏王慧萍、河北涿州市矿山局工程师董汉杰等。多人被迫害致精神失常、致残；被迫害致命危的法轮功学员人数更多，仅辽宁省女子监狱就有十多名法轮功学员被迫害致命危也不放人。</p>
 <p>明慧网二零一三年《中共酷刑虐杀法轮功学员调查报告》：中共有监狱122所，劳教所127所。二零一四年中共劳教所解体后，有一部分劳教所直接改为监狱继续非法关押迫害法轮功学员。</p>
@@ -21,34 +21,34 @@
 <p><b>二、暴力转化</b></p>
 <p>中共监狱是中共迫害法轮功学员的黑窝，为达到所谓“转化率”使上级满意，动用了各种酷刑、药物摧残及长时间奴工劳役等方法残害法轮功学员，使狱中法轮功学员精神及身体上遭受极大痛苦与伤害。中共监狱，每年年终都会有一场暴行，暴力强行“转化”法轮功学员。</p>
 <p><b>辽宁省本溪溪湖监狱年终暴力“转化”</b></p>
-<figure id="attachment_7568535" style="width: 329px" class="wp-caption aligncenter"><img class="wp-image-7568535 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2004-6-6-tiger_bench-ss-e1461012937667.jpg" alt="" width="329" b="242" /><figcaption class="wp-caption-text">“坐老虎凳”酷刑演示（明慧网）</figcaption></figure>
+<figure id="attachment_7568535" aria-describedby="caption-attachment-7568535" style="width: 329px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/04/2004-6-6-tiger_bench-ss-e1461012937667.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-7568535 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2004-6-6-tiger_bench-ss-e1461012937667.jpg" alt="" width="329" b="242" /></a><figcaption id="caption-attachment-7568535" class="wp-caption-text">“坐老虎凳”酷刑演示（明慧网）</figcaption></figure>
 <p>明慧网二零一五年十二月十九日报道，辽宁本溪溪湖监狱，简称本溪监狱，又搞年终暴力“转化”，迫害手段包括：坐老虎凳，不让睡觉、烟头烙、拳打脚踢、电棍电击、关小号。二零一四年十月末，狱长参加全国监狱长会议，回来后就对所有非法关押在各监区的法轮功学员进行强制转化，叫嚣着要有百分之百转化率。二零一五年十一月本溪监狱又笼罩在邪恶的气氛中，恶警们指使精神有异常的人迫害法轮功学员，还让恶犯人做牢头，比如：全身纹身的犯人，全身一丝不挂的、连祙子都不穿，没有廉耻、没有道德、没有礼貌、没有长幼、没有人性、凶狠的。警察用利益诱惑这类人迫害法轮功学员。直至今日，法轮功学员在这里仍在遭受巨大的肉体和精神上的摧残。</p>
 <p>本溪监狱剥夺学员与家属会见、通电话、通信的权利；能会见的被监听、录音、全程监视，通话内容有限制。</p>
-<p><b>本溪监狱典型<ahref="https://github.com/qeleqz3066/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E6%A1%88%E4%BE%8B.md#1">迫害案例</a></b></p>
+<p><b>本溪监狱典型<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E6%A1%88%E4%BE%8B.md#1">迫害案例</a></b></p>
 <p><b>○沈阳雄狮学校教师陈秀遭三天电击折磨，遍体鳞伤</b></p>
 <p>陈秀，沈阳雄狮学校教师，多才多艺。陈秀被多次殴打、多次关小号。二零一五年十一月二十日，监狱对他长达三天电击折磨，致使陈秀遍体鳞伤、无法行走，生活不能自理。</p>
 <p><b>○孟宪光，11月20号监狱对他长达三天电击折磨，孟宪光遍体鳞伤</b></p>
-<figure id="attachment_7568722" style="width: 280px" class="wp-caption aligncenter"><img class="wp-image-7568722 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2010-7-15-minghui-persecution-electric-batons-ss-e1461013102617.jpg" alt="" width="280" b="210" /><figcaption class="wp-caption-text">中共酷刑：电击（明慧网）</figcaption></figure>
+<figure id="attachment_7568722" aria-describedby="caption-attachment-7568722" style="width: 280px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/04/2010-7-15-minghui-persecution-electric-batons-ss-e1461013102617.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-7568722 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2010-7-15-minghui-persecution-electric-batons-ss-e1461013102617.jpg" alt="" width="280" b="210" /></a><figcaption id="caption-attachment-7568722" class="wp-caption-text">中共酷刑：电击（明慧网）</figcaption></figure>
 <p>孟宪光，11月20号监狱对他长达三天电击折磨，孟宪光遍体鳞伤、无法行走，生活不能自理。现在七监区。</p>
 <p><b>○周波遭恶警打耳光、老虎凳、烟头烤、电击等酷刑，精神出现恍惚</b></p>
 <p>周波，抚顺市法轮功学员，长期的精神折磨和肉体上的摧残，精神出现恍惚，整日呆呆的坐着，晚上也不能入睡。教育科科长赵学增对他实施暴力“转化”，经常指使几名刑事犯殴打周波及进行精神折磨，晚上不让睡觉，使周波的身心健康受到了严重的损伤。七监区大队长吴党强迫周波参加繁重奴役，有时强迫周波干奴工到半夜十二点。</p>
 <p>大队长吴党和几名狱警用电棍电击周波，周波的后背都被电糊，然后将周波关入小号。周波七天后从小号出来时，被电糊的后背已经发炎了。</p>
 <p>周琳，被恶警徐春生打两个耳光。高云祥指使犯人把周琳绑在老虎凳上，用胶带把双臂和双腿缠在凳子上，一动不让动，吃饭喝水让人喂，大小便让人接。六个犯人白天黑夜倒班。恶人石健用烟头烤周琳的中指，把中指皮肤烤破、烤焦，很长时间才好，还留有疤痕。恶警高云祥多次对法轮功学员说：“我要是说了算，我用枪都把你们突突了。”周琳现在二监区。</p>
 <p><b>○刘德服、秦丹平遭“抻床”等酷刑</b></p>
-<figure id="attachment_7568536" style="width: 280px" class="wp-caption aligncenter"><img class="size-full wp-image-7568536" src="https://i.epochtimes.com/assets/uploads/2016/04/2010-6-5-minghui-chinese-torture-205938-0-ss-e1461013179475.jpg" alt="酷刑演示（明慧网）" width="280" b="210" /><figcaption class="wp-caption-text">酷刑演示（明慧网）</figcaption></figure>
+<figure id="attachment_7568536" aria-describedby="caption-attachment-7568536" style="width: 280px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/04/2010-6-5-minghui-chinese-torture-205938-0-ss-e1461013179475.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-7568536" src="https://i.epochtimes.com/assets/uploads/2016/04/2010-6-5-minghui-chinese-torture-205938-0-ss-e1461013179475.jpg" alt="酷刑演示（明慧网）" width="280" b="210" /></a><figcaption id="caption-attachment-7568536" class="wp-caption-text">酷刑演示（明慧网）</figcaption></figure>
 <p>刘德服，遭到本溪监狱的洗脑、抻床酷刑、奴工等迫害。在警察宋群安背后指使下，多名犯人对他进行暴力毒打，头破缝了21针后又关小号锁地环。刘德服身体出现严重问题，头疼晕眩，腿不灵便，被医院检查出脑梗、心梗、脑血肿、高血压、坐不了，还被犯人监视强制做长时间奴工。刘德福被迫害致高血压260，低压140，还在老残队遭受绑铁椅子、老虎凳的酷刑。2015年12月期满释放。</p>
 <p><b>○秦丹平被绑老虎凳迫害</b></p>
-<figure id="attachment_7568532" style="width: 350px" class="wp-caption aligncenter"><img class="wp-image-7568532 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2015-1-15-minghui-kuxing-shanghai-02-2-ss-e1461013265588.jpg" alt="" width="350" b="276" /><figcaption class="wp-caption-text">酷刑演示：老虎凳（明慧网）</figcaption></figure>
+<figure id="attachment_7568532" aria-describedby="caption-attachment-7568532" style="width: 350px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/04/2015-1-15-minghui-kuxing-shanghai-02-2-ss-e1461013265588.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-7568532 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2015-1-15-minghui-kuxing-shanghai-02-2-ss-e1461013265588.jpg" alt="" width="350" b="276" /></a><figcaption id="caption-attachment-7568532" class="wp-caption-text">酷刑演示：老虎凳（明慧网）</figcaption></figure>
 <p>秦丹平，本溪监狱操控恶警及犯人将他绑在老虎凳上，双臂、双腿用胶纸缠住不能动弹，不许睡觉、不许上厕所，只喂给一点点食物和水。</p>
 <p><b>甘肃天水监狱四、五个电棍同时电，电击半小时左右，五十多天不让睡觉</b></p>
 <p>甘肃天水监狱恶警强迫法轮功学员五十多天不让睡觉、戴手铐脚镣、拳打脚踢、吊在床架上、电棍电是最常见的酷刑之一，将人压倒在地，用脚踩住头和身体，四、五个电棍同时电，电击半小时左右。关禁闭，戴手铐和脚镣。数九寒冬只穿囚衣，不许穿棉衣、毛衣、保暖内衣，不给饭吃，只给一碗能维持生命的流食。</p>
 <p><b>甘肃女子监狱的罪恶：</b></p>
 <p>明慧网二零一五年十一月一日报道，甘肃女子监狱还在残忍迫害法轮功学员，恶警丁海燕、罗亚琴指使犯人毒打法轮功学员。敦煌法轮功学员刘桂花被迫害致残；七旬老太太李翠芳被体罚、毒打、虐待。</p>
 <p>刘桂花（刘贵花）是甘肃省一名幼儿教师，因给当地民众讲法轮功真相遭恶人构陷，被绑架到甘肃省女子监狱非法拘禁在三号室。贩毒犯梅菊是她的包夹，常对她诬言秽语、破口大骂。后来包夹换成兰州的卢艳，每天故意不让上厕所。</p>
-<figure id="attachment_7568537" style="width: 280px" class="wp-caption aligncenter"><img class="wp-image-7568537 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2013-9-24-minghui-torture-beating-ss-1-e1461012399867.jpg" alt="" width="280" b="323" /><figcaption class="wp-caption-text">酷刑演示：毒打（明慧网）</figcaption></figure>
+<figure id="attachment_7568537" aria-describedby="caption-attachment-7568537" style="width: 280px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/04/2013-9-24-minghui-torture-beating-ss-1-e1461012399867.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-7568537 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2013-9-24-minghui-torture-beating-ss-1-e1461012399867.jpg" alt="" width="280" b="323" /></a><figcaption id="caption-attachment-7568537" class="wp-caption-text">酷刑演示：毒打（明慧网）</figcaption></figure>
 <p>有一次、刘桂花因上厕所被包夹卢艳、雅琴拉出来脱光衣服大打出手，殴打刘桂花。刘桂花大声喊叫魏丽玲队长：“救命！”声音凄惨，在整个号室回荡，几个监室清晰听见，唯有魏队长稳定在办公室，视而不见、充耳不闻，默许卢艳殴打她人，导致午饭前四、五个包夹轮流暴打刘桂花，从头到脚一盆一盆浇冷水，谓曰“洗澡”，刘桂花跪趴在地上，眼前摆放着一排塞嘴的毛巾，冻得不停颤抖。</p>
 <p>别人吃过午饭，卢艳将刘桂花的姐姐刘桂琴打得满脸通红，并让姐妹俩中午擦监室的过道，后给刘桂花裆部塞上卫生纸、毛巾，再将卫生纸取出塞进嘴里，再从头到脚灌冷水“洗澡”……</p>
-<figure id="attachment_7568533" style="width: 254px" class="wp-caption aligncenter"><img class="wp-image-7568533 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2012-5-28-cmh-mudanjiang-09-ss.jpg" alt="" width="254" b="234" /><figcaption class="wp-caption-text">酷刑演示：浇冷水（明慧网）</figcaption></figure>
+<figure id="attachment_7568533" aria-describedby="caption-attachment-7568533" style="width: 254px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/04/2012-5-28-cmh-mudanjiang-09-ss.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-7568533 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2012-5-28-cmh-mudanjiang-09-ss.jpg" alt="" width="254" b="234" /></a><figcaption id="caption-attachment-7568533" class="wp-caption-text">酷刑演示：浇冷水（明慧网）</figcaption></figure>
 <p>有一次卢艳给刘桂花欲加之罪，说刘桂花和别人说话，用拳猛击头部血管，鲜血从口中、鼻子中往外流，整个脸像血喷过。</p>
 <p><b>宁夏女子监狱的酷刑迫害</b></p>
 <p>进行轮流辱骂、欺侮、毒打；多次使用老虎凳反复折磨。电线拧成粗绳，抽打陈淑琴头部；长时间不让睡觉、罚蹲军姿、罚站、毒打等。派“包夹”监视一言一行、坐小板凳、随意打骂、强迫看栽赃诬陷法轮功的电视、强迫写“五书”、不让上卫生间、不让上厕所。将头按在水池子中呛；电警棍电击脸部，电警棍对着嘴边电击边捣，直到鲜血淋漓。</p>
@@ -69,7 +69,7 @@
 <p>河北省秦皇岛市法轮功学员廉宝昌于二零一三年六月十日被秦皇岛市公安局绑架，被非法判刑七年后，劫持至河北省冀东第八监狱。二零一五年九月三十日，廉宝昌的家人在会见日到冀东第八监狱去会见廉宝昌，被狱方阻止。廉宝昌在监狱遭熬鹰（即长时间不准睡觉）酷刑迫害七天七夜零半天，现又被单独隔离遭受迫害。</p>
 <p><b>大连刘作娜沈阳监狱遭毒打</b></p>
 <p>明慧网二零一五年四月十七日报道，大连法轮功学员刘作娜被非法判刑四年后，于二零一五年一月二十七日被劫持到辽宁女子监狱。据了解，刘作娜在狱中遭到狱警及犯人集体毒打。二月四日，刘作娜被九监区女狱警李思慧（音）和犯人丛薇、赵平、包小辉等十一人扒光衣服后进行毒打，被打得遍体鳞伤，然后又被关入小号迫害。刘作娜绝食抵制迫害，被拉到狱内医院进行野蛮灌食，然后又被关入小号继续迫害。现刘作娜已被送回九监区七小队（原四小队），但仍天天被包夹、洗脑，遭精神折磨。</p>
-<figure id="attachment_7568740" style="width: 280px" class="wp-caption aligncenter"><img class="wp-image-7568740 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2010-9-26-featurephotos-64-ss-e1461013667476.jpg" alt="" width="280" b="200" /><figcaption class="wp-caption-text">酷刑演示：殴打（明慧网）</figcaption></figure>
+<figure id="attachment_7568740" aria-describedby="caption-attachment-7568740" style="width: 280px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/04/2010-9-26-featurephotos-64-ss-e1461013667476.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-7568740 size-full" src="https://i.epochtimes.com/assets/uploads/2016/04/2010-9-26-featurephotos-64-ss-e1461013667476.jpg" alt="" width="280" b="200" /></a><figcaption id="caption-attachment-7568740" class="wp-caption-text">酷刑演示：殴打（明慧网）</figcaption></figure>
 <p><b>秘密冤判五年　王景香在天津市女子监狱遭毒打</b></p>
 <p>二零一五年六月初，家属在天津市第一女子监狱四大队见到王景香时，看到她身体很虚弱，出现高血压症状。王景香在监牢里炼功，遭到狱警和包夹的殴打，身体青一块，紫一块，而且狱警不让她睡觉。</p>
 <p>王景香，今年五十九岁，家住天津市东丽区。自二零零一年起，王景香数次被绑架，二零零一年十一月，被非法劳教，在板桥女子劳教所，狱警在她的饭中放不明药物，致使王景香精神失常，一度失去记忆力，在此后的十年中，又四次被迫害致生命垂危。具体迫害细节，请见《天津市法轮功学员王景香遭四次迫害命危》。</p>
@@ -88,36 +88,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/15/11/7/n4568564.md#1">陈思敏：从宁夏两广新闻说到曾庆红郭声琨</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/16/1/13/n4615589.md#1">掸封尘：法轮功学员与公检法司是什么关系？</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/16/1/14/n4616577.md#1">中国430万精神病患者出入院难的背后</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/16/1/15/n4616856.md#1">掸封尘：中国公检法司人员性命堪忧</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/11/7/n4568564.md#1">陈思敏：从宁夏两广新闻说到曾庆红郭声琨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/13/n4615589.md#1">掸封尘：法轮功学员与公检法司是什么关系？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/14/n4616577.md#1">中国430万精神病患者出入院难的背后</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/15/n4616856.md#1">掸封尘：中国公检法司人员性命堪忧</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/26/n10089507.md#1" target="_blank">共产暴政录：“破四旧”</a></li><li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238180.md#1" target="_blank">感恩法轮功师父 教我做个善良人</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10847366.md#1" target="_blank">林辉：燕大西语系四教授 文革三死一疯</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12250828.md#1">触目惊心 中储粮直属库再曝“硕鼠”事件</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/13/n12253624.md#1">陆媒称三峡大坝已尽力 黄万里之子揭设计缺陷</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12251066.md#1">东莞海滩惊现上万猪脚和内脏 遍布海岸线</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/13/n12252931.md#1">中共宣称制裁四位美国政要 卢比奥回应</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/13/n12251392.md#1">【拍案惊奇】江西大溃堤唐山又震！回顾1976</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12250927.md#1">中共广电总局新增20条禁令 杜汶泽发文嘲讽</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/13/n12252432.md#1">妻乳癌逝享年57岁 约翰?屈伏塔发文悼念</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12251164.md#1">林志玲登台北电影奖 事先不透风获赞超暖心</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/13/n12253613.md#1">靠药物控制情绪 金马影后马思纯被传停工治病</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/13/n12253192.md#1">曾志伟抖音直播卖货 货不对版遭网友投诉</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/5/20/n12122697.md#1">高鹗补红楼之年龄错谬及深度削弱</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12249941.md#1">中国第一坝三门峡大坝悲歌 为何坝成即祸出？</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/5/28/n12144105.md#1">【康熙大帝】毕生治河 天下安澜二十载</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/13/n12252460.md#1">海拔二千多公尺 世界最危险教堂盖在峭壁上</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/6/29/n12219238.md#1">世界仅存的马毛编织工艺</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qeleqz3066/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qeleqz3066/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/18/n7568464.htm">2015年中共监狱迫害法轮功学员综述</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/18/n7568464.htm">2015年中共监狱迫害法轮功学员综述</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qeleqz3066/djy/blob/master/gb/16/4/18/n7568464.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qeleqz3066/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qeleqz3066/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qeleqz3066/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/16/4/18/n7568464.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
